--- a/Chess/Chess.vcxproj
+++ b/Chess/Chess.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -127,7 +127,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CBishop.cpp" />
+    <ClCompile Include="CFigure.cpp" />
     <ClCompile Include="Chess.cpp" />
+    <ClCompile Include="CKing.cpp" />
+    <ClCompile Include="CKnight.cpp" />
+    <ClCompile Include="CPawn.cpp" />
+    <ClCompile Include="CQueen.cpp" />
+    <ClCompile Include="CRook.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CBishop.h" />
+    <ClInclude Include="CFigure.h" />
+    <ClInclude Include="CKing.h" />
+    <ClInclude Include="CKnight.h" />
+    <ClInclude Include="CPawn.h" />
+    <ClInclude Include="CQueen.h" />
+    <ClInclude Include="CRook.h" />
+    <ClInclude Include="Struct.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
