--- a/Chess/Chess.vcxproj.filters
+++ b/Chess/Chess.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="CRook.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CBoard.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CBishop.h">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Struct.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CBoard.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
